--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Test - Payment Gateway</title>
+		<title>SWP 2.0</title>
 		<script src="https://cdn.tailwindcss.com"></script>
 		<link
 			rel="stylesheet"
@@ -15,8 +15,8 @@
 		<div class="w-full max-w-md bg-white rounded-xl shadow-lg overflow-hidden">
 			<!-- Header -->
 			<div class="header_info bg-blue-600 py-4 px-6">
-				<h1 class="text-white text-xl font-semibold">Secure Payment</h1>
-				<p class="text-blue-100 text-sm mt-1">Complete your payment securely</p>
+				<h1 class="text-white text-xl font-semibold">SWP Secure Payment</h1>
+				<p class="text-blue-100 text-sm mt-1">Complete your payment</p>
 			</div>
 
 			<!-- Payment Form -->
